test/importers/invalid/duplicate_column_importer.rb
class DuplicateColumnImporter < CSVParty::Importer
  column :product
  column :product
end
